final version for course is done